--- a/bhashd/Dockerfile
+++ b/bhashd/Dockerfile
@@ -45,7 +45,9 @@ build-essential libtool autotools-dev autoconf pkg-config libssl-dev software-pr
 # =======================================================================================
 # Install bhash
 # =======================================================================================
-
+bhashOS=linux
+bhashURL=$(curl -s https://api.github.com/repos/bhashcoin/bhash/releases/latest | jq -r ".assets[] | select(.name | test(\"${bhashOS}\")) | .browser_download_url")
+curl -sSL $bhashURL | tar xvz -C /usr/local/bin/
 # ---------------------------------------------------------------------------------------
 
 # =======================================================================================
