fix Dockerfile again...

--- a/bhashd/Dockerfile
+++ b/bhashd/Dockerfile
@@ -25,6 +25,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 && apt-get update \
 && apt-get -y upgrade \
 && apt-get install -y autotools-dev libssl-dev software-properties-common libboost-all-dev libzmq3-dev libminiupnpc-dev libevent-dev libdb4.8-dev libdb4.8++-dev \
+&& apt-get autoremove
 # ---------------------------------------------------------------------------------------
 
 # =======================================================================================
@@ -49,7 +50,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 # Install bhash
 # =======================================================================================
 && bhashOS=linux \
-&& bhashURL=$(curl -s https://api.github.com/repos/bhashcoin/bhash/releases/latest | jq -r ".assets[] | select(.name | test(\"${bhashOS}\")) | .browser_download_url") \
+&& bhashURL="$(curl -s https://api.github.com/repos/bhashcoin/bhash/releases/latest | jq -r \".assets[] | select(.name | test(\"${bhashOS}\")) | .browser_download_url\")" \
 && curl -sSL $bhashURL | tar xvz -C /usr/local/bin/
 # ---------------------------------------------------------------------------------------
 
