--- a/bhashd/Dockerfile
+++ b/bhashd/Dockerfile
@@ -50,8 +50,8 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 # Install bhash
 # =======================================================================================
 && bhashOS=linux \
-&& bhashURL="$(curl -s https://api.github.com/repos/bhashcoin/bhash/releases/latest | jq -r \".assets[] | select(.name | test(\"${bhashOS}\")) | .browser_download_url\")" \
-&& curl -sSL $bhashURL | tar xvz -C /usr/local/bin/
+&& bhashURL=$(curl -s https://api.github.com/repos/bhashcoin/bhash/releases/latest | jq -r ".assets[] | select(.name | test(\"${bhashOS}\")) | .browser_download_url") \
+&& curl -sSL "$bhashURL" | tar xvz -C /usr/local/bin/
 # ---------------------------------------------------------------------------------------
 
 # =======================================================================================
