--- a/bhashd/Dockerfile
+++ b/bhashd/Dockerfile
@@ -50,7 +50,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 # Install bhash
 # =======================================================================================
 && bhashOS=linux \
-&& bhashURL=$(curl -s https://api.github.com/repos/bhashcoin/bhash/releases/latest | jq -r ".assets[] | select(.name | test(\"${bhashOS}\")) | .browser_download_url") \
+# && bhashURL=$(curl -s https://api.github.com/repos/bhashcoin/bhash/releases/latest | jq -r ".assets[] | select(.name | test(\"${bhashOS}\")) | .browser_download_url") \
 # && curl -sSL "$bhashURL" | tar xvz -C /usr/local/bin/
 # ---------------------------------------------------------------------------------------
 
